.metadata/.plugins/org.eclipse.cdt.ui/Serwomotor_V1.build.log
16:14:36 **** Incremental Build of configuration Debug for project Serwomotor_V1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:157:3: error: 'StartTheServo' undeclared (first use in this function)
  157 |   StartTheServo = 1;
      |   ^~~~~~~~~~~~~
../Core/Src/main.c:157:3: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:195:14: error: 'InterruptFlag' undeclared (first use in this function)
  195 |           if(InterruptFlag == 1)
      |              ^~~~~~~~~~~~~
../Core/Src/main.c:209:27: error: 'Message' undeclared (first use in this function)
  209 |                   sprintf(Message, "%.3f %.3f %d\r", Roll, Pitch, ServoValue);
      |                           ^~~~~~~
../Core/Src/main.c:209:67: error: 'ServoValue' undeclared (first use in this function)
  209 |                   sprintf(Message, "%.3f %.3f %d\r", Roll, Pitch, ServoValue);
      |                                                                   ^~~~~~~~~~
../Core/Src/main.c: In function 'HAL_TIM_PeriodElapsedCallback':
../Core/Src/main.c:290:17: error: 'InterruptFlag' undeclared (first use in this function)
  290 |                 InterruptFlag = 1;
      |                 ^~~~~~~~~~~~~
../Core/Src/main.c:313:1: warning: "/*" within comment [-Wcomment]
  313 | /*
      |  
../Core/Src/main.c: At top level:
../Core/Src/main.c:435:14: warning: 'SetAngle_WithGlobalUpdate' defined but not used [-Wunused-function]
  435 |         void SetAngle_WithGlobalUpdate(uint16_t Angle, uint8_t Mode)
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:52: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

16:14:37 Build Failed. 6 errors, 2 warnings. (took 1s.74ms)

